bin_PROGRAMS = sndbyinterest 
sndbyinterest_SOURCES = sndbyinterest.cpp

sndbyinterest_LDFLAGS = -g -Wall -lhaggle -lxml2 -L/usr/local/haggle/lib
sndbyinterest_CPPFLAGS = -I/usr/local/haggle/include/ -I/usr/local/haggle/include/libhaggle -I/usr/local/haggle/include/utils

all-local:

clean-local:
	rm -f *~

